@@ -1,6 +1,8 @@
 1.32.1
 ------
-- ports/cmake: include CheckTypeSize, which seems to be needed sometimes (bug 357)
+- ports/cmake:
+-- Include CheckTypeSize, which seems to be needed sometimes (bug 357).
+-- Avoid O_LARGEFILE redefinition, logic closer to autoconf.
 
 1.32.0
 ------
